<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.detail.DetailActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/cv_image_preview"
            android:layout_width="210dp"
            android:layout_height="280dp"
            android:contentDescription="@string/desc_iv">
        </ImageView>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/form_title"
        app:layout_constraintTop_toBottomOf="@id/cv_image"
        app:layout_constraintStart_toStartOf="parent"
        >
    </TextView>
    <TextView
        android:id="@+id/tv_jentan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/form_jentan"
        app:layout_constraintTop_toBottomOf="@id/tv_judul"
        app:layout_constraintStart_toStartOf="parent">
    </TextView>
    <Spinner
        android:id="@+id/spin_jentan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintTop_toBottomOf="@id/tv_jentan"
        app:layout_constraintStart_toStartOf="parent">
    </Spinner>
    <TextView
        android:id="@+id/tv_lokasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/form_lokasi"
        app:layout_constraintTop_toBottomOf="@id/spin_jentan"
        app:layout_constraintStart_toStartOf="parent">
    </TextView>
    <Spinner
        android:id="@+id/spin_lokasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintTop_toBottomOf="@id/tv_lokasi"
        app:layout_constraintStart_toStartOf="parent">
    </Spinner>
    <TextView
        android:id="@+id/tv_tahun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/form_tahun"
        app:layout_constraintTop_toBottomOf="@id/spin_lokasi"
        app:layout_constraintStart_toStartOf="parent">
    </TextView>
    <Spinner
        android:id="@+id/spin_tahun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintTop_toBottomOf="@id/tv_tahun"
        app:layout_constraintStart_toStartOf="parent">
    </Spinner>
    <TextView
        android:id="@+id/tv_kegiatan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/form_kegiatan"
        app:layout_constraintTop_toBottomOf="@id/spin_tahun"
        app:layout_constraintStart_toStartOf="parent">
    </TextView>
    <Spinner
        android:id="@+id/spin_kegiatan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintTop_toBottomOf="@id/tv_kegiatan"
        app:layout_constraintStart_toStartOf="parent">
    </Spinner>
    <TextView
        android:id="@+id/tv_sk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/form_sk"
        app:layout_constraintTop_toBottomOf="@id/spin_kegiatan"
        app:layout_constraintStart_toStartOf="parent">
    </TextView>
    <Spinner
        android:id="@+id/spin_sk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintTop_toBottomOf="@id/tv_sk"
        app:layout_constraintStart_toStartOf="parent">
    </Spinner>
    <Button
        android:id="@+id/bt_batal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/bt_batal"
        app:layout_constraintTop_toBottomOf="@id/spin_sk"
        app:layout_constraintStart_toStartOf="parent">
    </Button>

    <Button
        android:id="@+id/bt_simpan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/bt_simpan"
        app:layout_constraintStart_toEndOf="@+id/bt_batal"
        app:layout_constraintTop_toBottomOf="@id/spin_sk">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>